# BLE-MESH

Fast_prov/fast_prov_client/: sdkconfig
Fast_prov/fast_prov_server/: sdkconfig
Fast_prov/fast_prov_server/main/: board.c  board.h  main.c
Generic_ONOFF/onoff_client/: sdkconfig
Generic_ONOFF/onoff_client/main/: board.c
Generic_ONOFF/onoff_server/: sdkconfig
Generic_ONOFF/onoff_server/main/: board.c  board.h  main.c
ble_hid_device_keypad/: CMakeLists.txt
ble_hid_device_keypad/main/: CMakeLists.txt  ble_hidd_demo_main.c  esp32_button.c  hid_dev.h  keypad.c  keypad.h
bt_hid_mouse_device/: sdkconfig.old
bt_hid_mouse_device/main/: main.c
